--- a/projects/spring-boot/pom.xml
+++ b/projects/spring-boot/pom.xml
@@ -114,18 +114,34 @@
     </dependency>
     
     <!-- Add Flowable dependencies -->
-  
+
     <dependency>
       <groupId>org.flowable</groupId>
       <artifactId>flowable-spring-boot-starter-process-rest</artifactId>
       <version>${flowable.version}</version>
     </dependency>
-    
+
+    <!--
+    <dependency>
+      <groupId>org.flowable</groupId>
+      <artifactId>flowable-spring-boot-starter-rest</artifactId>
+      <version>${flowable.version}</version>
+    </dependency>
+    -->
+
     <dependency>
       <groupId>org.flowable</groupId>
       <artifactId>flowable-ldap</artifactId>
       <version>${flowable.version}</version>
     </dependency>
+
+    <!--
+    <dependency>
+      <groupId>org.flowable</groupId>
+      <artifactId>flowable-spring-boot-starter-actuator</artifactId>
+      <version>${flowable.version}</version>
+    </dependency>
+    -->
 
     <!-- Add LOMBOK dependencies -->
 
