--- a/projects/spring-boot/server/flowable/wars/application.properties
+++ b/projects/spring-boot/server/flowable/wars/application.properties
@@ -14,6 +14,12 @@ spring.datasource.password=secret
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
+# H2 Console
+spring.h2.console.enabled=false
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+
 # Default Admin Accounts
 flowable.idm.app.admin.user-id=flowable
 flowable.idm.app.admin.password=secret
