--- a/projects/spring-boot/server/docker-compose.yml
+++ b/projects/spring-boot/server/docker-compose.yml
@@ -31,8 +31,4 @@ services:
       - "3001:3001"
     volumes:
       - ./h2:/h2
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:h2:/h2/serendipity
-      AUTO_SERVER: 1
-      AUTO_SERVER_PORT: 9091
-      DB_CLOSE_DELAY: -1
+    env_file: ./serendipity-api.env
