--- a/projects/spring-boot/server/serendipity-api-prod.env
+++ b/projects/spring-boot/server/serendipity-api-prod.env
@@ -24,3 +24,5 @@ SPRING_DATASOURCE_URL=jdbc:h2:/h2/serendipity
 AUTO_SERVER=TRUE
 AUTO_SERVER_PORT=9091
 DB_CLOSE_DELAY=-1
+
+SPRING_MVC_STATIC_PATH_PATTERN=/docs/**
