--- a/projects/spring-boot/server/src/main/resources/application.properties
+++ b/projects/spring-boot/server/src/main/resources/application.properties
@@ -35,6 +35,6 @@ spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=true
 
-spring.mvc.static-path-pattern=/docs/**
+spring.mvc.static-path-pattern=/**
 
 # https://docs.spring.io/spring-boot/docs/1.3.0.M1/reference/html/boot-features-external-config.html#boot-features-external-config-relaxed-binding
